# projekt-msc-ws2324

./: .gitignore  LICENSE  README.md  projektmsc-jendoubi-wise2223.code-workspace
Documentation/: Checklist.mht  projekt-nrf.mht  projekt-nrf.onepkg
Python-BLE-Central/: GATT-Client.py  gatt_client.py  main.py  test.py
Python-BLE-Central/pressure_logs/: pressure_log_CALIBRATE_2024-02-06@07_48_48_prepr.csv  pressure_log_CALIBRATE_2024-02-06@07_48_56.csv  pressure_log_CALIBRATE_2024-02-06@07_48_56_prepr.csv
docs/: solution.vsdx  ~$$solution.~vsdx
docs/report/Projekt Msc. ET - Malek Jendoubi/: lit.bib  main.tex  unirostock.cls
docs/report/Projekt Msc. ET - Malek Jendoubi/chapter/: 1_introduction.tex  2_solution.tex  3_results.tex  4_conclusion.tex  erklaerung.tex
i2c_bmp581/: CMakeLists.txt  nrf52_adafruit_feather.overlay  prj.conf  prj_minimal.conf
i2c_bmp581/bmp5/: bmp5.h  bt-periph.h  common.h  main.h  timestamp.h
i2c_bmp581/bmp5-api/: common.c
i2c_bmp581/src/: bmp5.c  bt-periph.c  common.c  main.c
nrf_52_server/: CMakeLists.txt  CMakePresets.json  nrf52_adafruit_feather.overlay  prj.conf
nrf_52_server/bmp5/: bt-periph.h  common.h
nrf_52_server/lib/: bt-periph.h  common.h  main.h
nrf_52_server/src/: bmp5.c  bt-periph.c  common.c  main.c
python_client/: ArgParser.py  LOG_CALIBRATE.csv  bmp581_client.py  bt_client.ipynb  bt_client.py  build_csv.py  gatt_client.py  main.py  nrf_log_parser.py  plot_values.py  python_client.ipynb  python_client.py  uart_service.py
